@@ -1,2 +1,4 @@
 # Chess
 Chess game made with javaFX
+
+Add "--module-path %path_to_JavaFX% --add-modules=javafx.controls" to run application.
